test/conformance/chainsaw/mutating-policies/existing/background-scan-ns-selector/configmap-excluded.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-mpol-bgns-cm
  namespace: test-mpol-bgns-excluded-ns
data:
  key: value
