test/conformance/chainsaw/mutating-policies/existing/background-scan-ns-selector/configmap-matching.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-mpol-bgns-cm
  namespace: test-mpol-bgns-selector-ns
data:
  key: value
