test/conformance/chainsaw/mutating-policies/existing/background-scan-ns-selector/namespace-matching.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-mpol-bgns-selector-ns
  labels:
    env: production
