test/conformance/chainsaw/mutating-policies/existing/background-scan-ns-selector/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: MutatingPolicy
metadata:
  name: test-mpol-bgns-selector
spec:
  failurePolicy: Fail
  evaluation:
    admission:
      enabled: false
    background:
      enabled: true
    mutateExisting:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchLabels:
        env: production
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["configmaps"]
      resourceNames: ["test-mpol-bgns-cm"]
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: >
        Object{
          metadata: Object.metadata{
            labels: Object.metadata.labels{
              scanned: "yes"
            }
          }
        }
