test/conformance/chainsaw/mutating-policies/existing/background-scan-ns-selector/configmap-matching-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-mpol-bgns-cm
  namespace: test-mpol-bgns-selector-ns
  labels:
    scanned: "yes"
